# alpha-memory

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  MEMORY.md  README.ko.md  README.md  memory-naia-local-cache-en-gemini.json  memory-naia-local-cache-en.json  memory-naia-local-cache-ko-gemini.json  memory-naia-local-cache-ko-gemini.json.r10-backup  memory-naia-local-cache-ko-gemini.json.r11-fresh  memory-naia-local-cache-ko-offline-e5.json  memory-naia-local-cache-ko-qwen3-emb-8b.json  memory-naia-local-cache-ko.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.typecheck.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
api-server/: Dockerfile  config.py  create_db.py  database.py  main.py  models.py  pyproject.toml
api-server/utils/: experiment_manager.py
coverage/: coverage-summary.json
docs/: cognitive-architecture.md  integration.md  laptop-vllm-experiment.md
memory-service/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
reports/: EXECUTION_HISTORY.md  R5-EN-FINAL-REPORT.md  REPORT_TEMPLATE.md  aihub141-r2-3-2026-05-07T05-19-43-284Z-embedding-reanalysis.md  aihub141-r2-3-reanalysis-100conv.md  checkpoint-naia-en.json.gemini-backup  checkpoint-naia-ko.json.gemini-backup  dispute-gemini31.txt  dispute-glm51.txt  disputes.json  encode-checkpoint-naia-en.json.gemini-backup  final-integration-summary.md  issue-220-final-verification-report.md  issue-220-hardened-verification-report.md  naia-en-final-glm51.json  naia-en-final-pro-v2.json  naia-en-final-pro.json  naia-en-glm51.json  naia-en-pro.json  (+54 more)
(+176 files in other folders)
